[tool.pysen]
version = "0.11"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py311"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]


[tool.poetry]
name = "aoirint-mcping-bff"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"
packages = [{include = "aoirint_mcping_bff"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
requests = "^2.32.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pysen = "^0.11.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.6"
black = "^24.4.2"
isort = "^5.13.2"
types-requests = "^2.28.11.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
